welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:7: error: reassignment to val
		i=6;
                 ^